HP uses markdown, so different tooling needed.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -23,19 +23,19 @@ sbosnap(1)\fR\
 \&) checks for available upgrades, and reports what it finds.
 SlackBuilds with differing build numbers are reported separately,
 as are any SlackBuilds marked
-.I 
-_SBo\fR\
- that are not found in the
+.I
+_SBo
+that are not found in the
 repository.
 .P
 The three output categories are logged separately to
-.I 
+.I
 /etc/sbocheck.log\fR\
 \&,
-.I 
-/etc/sbocheck-bumps.log\fR\
- and
-.I 
+.I
+/etc/sbocheck-bumps.log
+and
+.I
 /etc/sbocheck-out-of-tree.log\fR\
 \&.
 .SH OPTIONS
