--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -107,13 +107,13 @@ NOCLEAN\fR\
 TRUE\fR\
 \&, do not clean working directories after building.
 These are the build and
-.I 
-package-(sbo)\fR\
- directories under
-.I 
-/tmp/SBo\fR\
- (or
-.I 
+.I
+package-(sbo)
+directories under
+.I
+/tmp/SBo
+(or
+.I
 $TMP\fR\
 \&).
 .RE
@@ -128,9 +128,9 @@ DISTCLEAN\fR\
 TRUE\fR\
 \&, then remove the source archives after building. They
 are retained in
-.I 
-/usr/sbo/distfiles\fR\
- (with default
+.I
+/usr/sbo/distfiles
+(with default
 .B
 SBO_HOME\fR\
 \&).
@@ -180,7 +180,7 @@ path\fR\
 .B
 slackbuilds.org
 tree will be stored. The default setting is
-.I 
+.I
 /usr/sbo\fR\
 \&. The tree must be re-downloaded with
 .B
@@ -203,13 +203,13 @@ path\fR\
 SlackBuild name will be used in preference to the
 in-tree version. This will work even if the SlackBuild
 is out-of-tree.
-.I 
+.I
 README\fR\
 \&,
-.I 
+.I
 slack-desc\fR\
 \&, an
-.I 
+.I
 info\fR\
  file and a SlackBuild must all be present.
 .RE
@@ -227,7 +227,7 @@ version number\fR\
 slackbuilds.org
 repository for that version of Slackware rather than
 the one specified in
-.I 
+.I
 /etc/slackware-version\fR\
 \&.
 .RE
