--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -22,15 +22,14 @@ with path and version information. This is equivalent to
 running
 .RS
 
-.I 
-cd /usr/ports; make search name=$search_term display=name,path\fR\
+cd /usr/ports; make search name=$search_term display=name,path
 
 
 .RE
 on a FreeBSD system. If the repository includes a
-.I 
-TAGS.txt\fR\
- file, that will be used to find additional results.
+.I
+TAGS.txt
+file, that will be used to find additional results.
 .SH OPTIONS
 .P
 .B
@@ -61,18 +60,18 @@ Exclude tags from the search.
 -i|--info
 .RS
 Show the contents of the
-.I 
-info\fR\
- file for each SlackBuild found.
+.I
+info
+file for each SlackBuild found.
 .RE
 .P
 .B
 -r|--readme
 .RS
 Show the contents of the
-.I 
-README\fR\
- file for each SlackBuild found.
+.I
+README
+file for each SlackBuild found.
 .RE
 .P
 .B
