--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -11,7 +11,8 @@ sboinstall [-h|-v]
 sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
            [-ipRr] [--create-template FILE] sbo_name (sbo_name)
 .P
-sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] [-i] --use-template FILE
+sboinstall [-d TRUE|FALSE] [-j #|FALSE] [-c TRUE|FALSE] \\
+           [-i] --use-template FILE
 .SH DESCRIPTION
 .P
 .B
@@ -23,9 +24,9 @@ flag is not specified,
 .B
 sboinstall
 will pull the list of requirements from the
-.I 
-info\fR\
- file for any specified SlackBuild. This is a recursive
+.I
+info
+file for any specified SlackBuild. This is a recursive
 operation over all dependencies.
 .B
 sboinstall
@@ -33,9 +34,9 @@ will offer to install any non-installed dependencies in
 the build queue. This program will not handle circular
 dependencies.
 .P
-.I 
-README\fR\
- files are parsed for
+.I
+README
+files are parsed for
 .B
 groupadd
 and
@@ -45,30 +46,30 @@ commands, and
 .B
 sboinstall
 will offer to run them prior to building. If the
-.I 
-README\fR\
- is judged to document options in
+.I
+README
+is judged to document options in
 .I
 KEY=VALUE
 form, a prompt for setting options will appear. Any
 build options, whether passed interactively or in a
 template, will be saved to
-.I 
-/var/log/sbotools\fR\
- when the SlackBuild runs.
+.I
+/var/log/sbotools
+when the SlackBuild runs.
 .P
 .B
 sboinstall
 will attempt to download the sources from the
-.I 
-DOWNLOAD\fR\
- or
-.I 
-DOWNLOAD_x86_64\fR\
- variables in the
-.I 
-info\fR\
- file. If
+.I
+DOWNLOAD
+or
+.I
+DOWNLOAD_x86_64
+variables in the
+.I
+info
+file. If
 either the download or the md5sum check fails, a new
 download will be attempted from
 .UR ftp://slackware.uk/sbosrcarch/
@@ -91,15 +92,18 @@ Show version information.
 .B
 -c|--noclean (FALSE|TRUE)
 .RS
-If TRUE, do not clean working directories after building.
+If
+.B
+TRUE\fR\
+\&, do not clean working directories after building.
 These are the build and
-.I 
-package-(sbo)\fR\
- directories under
-.I 
-/tmp/SBo\fR\
- (or
-.I 
+.I
+package-(sbo)
+directories under
+.I
+/tmp/SBo
+(or
+.I
 $TMP\fR\
 ). Cleaning these directories can be set as default
 via the
@@ -119,9 +123,9 @@ If
 TRUE\fR\
 \&, then remove the source archives after building. They
 are retained in
-.I 
-SBO_HOME/distfiles\fR\
- by default. This option can be set as default via the
+.I
+SBO_HOME/distfiles
+by default. This option can be set as default via the
 .B
 sboconfig(1)
 command. See also
@@ -135,10 +139,10 @@ sbotools.conf(5)\fR\
 .RS
 Do not install the package at the end of the build process.
 It will be left in
-.I 
-/tmp\fR\
- (or
-.I 
+.I
+/tmp
+(or
+.I
 $OUTPUT\fR\
 ), or in
 .B
@@ -155,7 +159,10 @@ sbotools.conf(5)\fR\
 .B
 -j|--jobs (FALSE|#)
 .RS
-If numerical, pass to the
+If
+.B
+numerical\fR\
+\&, pass to the
 .B
 -j
 argument when a SlackBuild invoking
@@ -203,9 +210,9 @@ a template instead.
 -R|--norequirements
 .RS
 Bypass dependency resolution, but still show
-.I 
-README\fR\
- and the
+.I
+README
+and the
 user prompts before proceeding with the build.
 .RE
 .P
@@ -258,7 +265,10 @@ can exit with the following codes:
 6: unable to obtain a required file handle.
 .RE
 .RS
-7: unable to get required info from the .info file.
+7: unable to get required info from the
+.I
+info
+file.
 .RE
 .RS
 8: unable to unset the exec-on-close bit on a temporary file.
