--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -16,9 +16,9 @@ sboremove
 removes packages installed from SlackBuilds, along with
 any unneeded dependencies. Dependency information is
 pulled recursively from
-.I 
-info\fR\
- files; any dependencies
+.I
+info
+files; any dependencies
 that are required by no other SlackBuilds will be eligible
 for removal as well. If
 .B
