--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -20,9 +20,9 @@ is used to download and update a local copy of the
 .B
 slackbuilds.org
 tree, without the
-.I 
-*.tar.gz{,.asc}\fR\
- files. Note that
+.I
+*.tar.gz{,.asc}
+files. Note that
 .B
 sbocheck(1)
 also updates the tree and checks for updated and removed
@@ -76,11 +76,12 @@ setting (see
 .B
 sboconfig(1)
 and
+.B
 sbotools.conf(5)\fR\
-\&),
-.I 
-/usr/sbo\fR\
- by default.
+),
+.I
+/usr/sbo
+by default.
 .RE
 .P
 .B
