--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -18,20 +18,20 @@ is used to clean files left by
 sbotools3\fR\
 \&,
 such as saved options (in
-.I 
+.I
 /var/log/sbotools\fR\
 \&), downloaded source files (\(lqdistfiles\(rq), or
 working directories under
-.I 
-/tmp/SBo\fR\
- (or
-.I 
+.I
+/tmp/SBo
+(or
+.I
 $TMP\fR\
 \&) and, for compat32 installs, under
-.I 
-/tmp\fR\
- (or
-.I 
+.I
+/tmp
+(or
+.I
 $TMP\fR\
 \&). Note that if not run with the
 .B
@@ -40,16 +40,16 @@ flag,
 .B
 sboclean
 will remove anything in the distfiles and/or
-.I 
-/tmp/SBo\fR\
- (or
-.I 
+.I
+/tmp/SBo
+(or
+.I
 $TMP\fR\
 \&) directories and any
-.I 
-/tmp/package-*-compat32\fR\
- (or
-.I 
+.I
+/tmp/package-*-compat32
+(or
+.I
 $TMP/package-*-compat32\fR\
 \&) directories with extreme prejudice. One of
 .B
@@ -79,19 +79,19 @@ Show version information.
 -d|--dist
 .RS
 Clean distfiles, located at
-.I 
-/usr/sbo/distfiles\fR\
- by default.
+.I
+/usr/sbo/distfiles
+by default.
 .RE
 .P
 .B
 -w|--work
 .RS
 Clean working directories, located by default under
-.I 
-/tmp/SBo\fR\
- and, for compat32 installs,
-.I 
+.I
+/tmp/SBo
+and, for compat32 installs,
+.I
 /tmp\fR\
 \&.
 .RE
@@ -103,7 +103,7 @@ With
 .B
 ALL\fR\
 \&, clean all saved options from
-.I 
+.I
 /var/log/sbotools\fR\
 \&. With the name of a SlackBuild, clean the saved
 options for that SlackBuild only.
