--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -142,7 +142,7 @@ are always welcome.
 .SH SEE ALSO
 .P
 sbocheck(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
-.SH AUTHOR
+.SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
 .P
