--- a/SBO3-Lib/Changes
+++ b/SBO3-Lib/Changes
@@ -1,4 +1,6 @@
 sbotools3
+  * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
+
 1.1 - 2024-11-03
   * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.
 
