sbofind: Report installed reverse dependencies.

--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -11,7 +11,7 @@ tree for a given name
 .P
 sbofind [-h|-v]
 .P
-sbofind [-etirq] search_term
+sbofind [-etiRrq] search_term
 .SH DESCRIPTION
 .P
 .B
@@ -72,6 +72,12 @@ Show the contents of the
 .I
 README
 file for each SlackBuild found.
+.RE
+.P
+.B
+-R|--reverse
+.RS
+Show any reverse dependencies installed on the system.
 .RE
 .P
 .B
