Add note to -R section of sbofind.1.

--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -78,6 +78,11 @@ file for each SlackBuild found.
 -R|--reverse
 .RS
 Show any reverse dependencies installed on the system.
+Please note that this does not include optional dependencies
+or packages with tags other than
+.I
+_SBo\fR\
+\&.
 .RE
 .P
 .B
