A bit of cleanup.

--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -29,7 +29,8 @@ If
 TRUE\fR\
 \&, automatically enable
 .B
-RSYNC_DEFAULT and
+RSYNC_DEFAULT
+and
 .B
 BUILD_IGNORE
 (overriding the contents of this file). Build increment and out-of-tree
