Renaming to sbotools isn't out of the question.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,4 @@
-sbotools3
+sbotools
 Post-1.1
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
   * sboremove: Remove undocumented and dangerous nointeractive option
