--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -1,11 +1,11 @@
-.TH sboclean 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sboclean 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
 sboclean
 - clean files left by
 .B
-sbotools3.
+sbotools.
 .SH SYNOPSIS
 .P
 sboclean [-h|-v] [-dwi] [-o ALL|package]
@@ -15,7 +15,7 @@ sboclean [-h|-v] [-dwi] [-o ALL|package]
 sboclean
 is used to clean files left by
 .B
-sbotools3\fR\
+sbotools\fR\
 \&,
 such as saved options (in
 .I
@@ -136,7 +136,7 @@ with nothing to clean.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.UR https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools/
 .UE
 are always welcome.
 .SH SEE ALSO
