--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,11 +1,11 @@
-.TH sboconfig 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sboconfig 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
 sboconfig
 - set
 .B
-sbotools3
+sbotools
 configuration options.
 .SH SYNOPSIS
 .P
@@ -23,7 +23,7 @@ sboconfig [-C TRUE|FALSE] [-c TRUE|FALSE] [-d TRUE|FALSE] \\
 sboconfig
 is a front-end for managing
 .B
-sbotools3
+sbotools
 configuration
 options. The
 .B
@@ -31,7 +31,7 @@ sbotools.conf(5)
 file can also be manually edited; any fields not
 relevant to
 .B
-sbotools3
+sbotools
 configuration will be ignored.
 .SH OPTIONS
 .P
@@ -270,7 +270,7 @@ REPO\fR\
 URL\fR\
 \&, use that repository instead of the
 .B
-sbotools3
+sbotools
 default for your
 .B
 SLACKWARE_VERSION\fR\
@@ -325,7 +325,7 @@ was unable to obtain a required file handle.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.UR https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools/
 .UE
 are always welcome.
 .SH SEE ALSO
