--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -1,4 +1,4 @@
-.TH sboremove 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sboremove 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
@@ -74,7 +74,7 @@ with nothing to remove.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.UR https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools/
 .UE
 are always welcome.
 .SH SEE ALSO
