--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -1,4 +1,4 @@
-.TH sbosnap 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sbosnap 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
@@ -34,7 +34,7 @@ is used for rsync repositories, and
 git
 is used for git repositories.
 .B
-sbotools3
+sbotools
 defaults to git unless
 .B
 RSYNC_DEFAULT
@@ -110,7 +110,7 @@ can exit with the following codes:
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.UR https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools/
 .UE
 are always welcome.
 .SH SEE ALSO
