--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,11 +1,11 @@
-.TH sbotools.conf 5 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sbotools.conf 5 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
 sbotools.conf
 - configuration file for
 .B
-sbotools3
+sbotools
 commands
 .SH DESCRIPTION
 .P
@@ -16,7 +16,7 @@ contains
 KEY=VALUE
 configuration parameters, and is read by all
 .B
-sbotools3
+sbotools
 commands.
 .P
 The current configuration keys are as follows:
@@ -209,7 +209,7 @@ If set to a git or rsync
 URL\fR\
 \&, use that repository instead of the
 .B
-sbotools3
+sbotools
 default for your
 .B
 SLACKWARE_VERSION\fR\
