--- a/SBO-Lib/README
+++ b/SBO-Lib/README
@@ -1,7 +1,7 @@
-SBO3-Lib version 1.1
+SBO-Lib version 3.1
 ===================
 
-SBO3::Lib is a library for the sbotools scripts.
+SBO::Lib is a library for the sbotools scripts.
 
 INSTALLATION
 
