--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -1,4 +1,4 @@
-.TH sboupgrade 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools3 1.1" sbotools3
+.TH sboupgrade 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
@@ -333,7 +333,7 @@ script cannot be found (where required).
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
-.UR https://github.com/pghvlaans/sbotools3/
+.UR https://github.com/pghvlaans/sbotools/
 .UE
 are always welcome.
 .SH SEE ALSO
