fix help verbiage, other cleanup

--- a/SBO3-Lib/Changes
+++ b/SBO3-Lib/Changes
@@ -4,6 +4,7 @@ Post-1.1
   * sboremove: Remove undocumented and dangerous nointeractive option
   * sbofind: Use --reverse to check for installed reverse dependencies
   * Add setting CLASSIC; turn on BUILD_IGNORE and RSYNC_DEFAULT, and disable output added post-sbotools
+  * Fix some --help verbiage
 
 1.1 - 2024-11-03
   * Bugfix: incorrect variable name caused sboupgrade to rebuild when unneeded.
@@ -19,6 +20,9 @@ Post-1.1
   * Install a default configuration file; tweak sboconfig to play somewhat nicely with it
 
 Historical Changes
+Post-2.7 - 2019
+  * Add and install zsh completions
+
 2.7 - 2019-04-28
   * Actually fix the sbofind -e bug
     (https://github.com/pink-mist/sbotools/issues/71)
