--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -6,7 +6,7 @@ sbocheck
 - update a local
 .B
 slackbuilds.org
-tree and check for updates.
+tree and check for updates
 .SH SYNOPSIS
 .P
 sbocheck [-h|-v]
