--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -6,7 +6,7 @@ sboconfig
 - set
 .B
 sbotools3
-configuration options.
+configuration options
 .SH SYNOPSIS
 .P
 sboconfig [-h|-v]
@@ -130,7 +130,7 @@ look and feel for those who want it.
 .RS
 .B
 NOCLEAN\fR\
-\&:If
+\&: If
 .B
 TRUE\fR\
 \&, do not clean working directories after building.
