Man page fixes.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -22,7 +22,7 @@ slackbuilds.org
 tree (see
 .B
 sbosnap(1)\fR\
-\&) checks for available upgrades, and reports what it finds.
+\&), checks for available upgrades, and reports what it finds.
 SlackBuilds with differing build numbers are reported separately,
 as are any SlackBuilds marked
 .I
