--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -5,10 +5,12 @@
 sboclean
 - clean files left by
 .B
-sbotools3
+sbotools
 .SH SYNOPSIS
 .P
-sboclean [-h|-v] [-dwi] [-o ALL|package]
+sboclean [-h|-v]
+.P
+sboclean [-dwi] [-o ALL|package]
 .SH DESCRIPTION
 .P
 .B
