--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -19,7 +19,7 @@ pulled recursively from
 .I
 info
 files; any dependencies
-that are required by no other SlackBuilds will be eligible
+that are required by no other installed SlackBuilds will be eligible
 for removal as well. If
 .B
 sboremove
