--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -50,15 +50,21 @@ DISTCLEAN=(FALSE|TRUE)
 If
 .B
 TRUE\fR\
-\&, then remove the source archives after building. They
-are retained in
+\&, then remove the package and source archives after building. Source
+archives are otherwise retained in
 .I
 /usr/sbo/distfiles
 (with
 .I
 SBO_HOME=/usr/sbo\fR\
 \&)
-by default.
+by default. If
+.B
+PKG_DIR
+is set, package archives will be saved there regardless of
+.B
+DISTCLEAN\fR\
+\&.
 .RE
 .P
 .B
