man page fixes.

--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -8,7 +8,9 @@ sboclean
 sbotools3
 .SH SYNOPSIS
 .P
-sboclean [-h|-v] [-dwi] [-o ALL|package]
+sboclean [-h|-v]
+.P
+sboclean [-dwi] [-o ALL|package]
 .SH DESCRIPTION
 .P
 .B
