--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -1,4 +1,4 @@
-.TH sbofind 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sbofind 1 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
 .SH NAME
 .P
 .B
