--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -1,4 +1,4 @@
-.TH sboupgrade 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sboupgrade 1 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
 .SH NAME
 .P
 .B
