--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sbotools.conf 5 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
 .SH NAME
 .P
 .B
