sbofind: Allow multiple search terms.

--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -6,18 +6,18 @@ sbofind
 - search the local copy of the
 .B
 slackbuilds.org
-tree for a given name
+tree for a given name or names
 .SH SYNOPSIS
 .P
 sbofind [-h|-v]
 .P
-sbofind [-etiRrq] search_term
+sbofind [-etiRrq] search_term (search_term)
 .SH DESCRIPTION
 .P
 .B
 sbofind
-searches the names of all available SlackBuilds for a
-given term. It reports back any SlackBuilds found along
+searches the names of all available SlackBuilds for one or more
+search terms. It reports back any SlackBuilds found along
 with path and version information. This is equivalent to
 running
 .RS
