--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,7 @@
 sbotools
+Post-3.0
+  * sbofind: Allow multiple search terms
+
 3.0 - 2024-11-22
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
   * sboremove: Remove undocumented and dangerous nointeractive option
