--- a/slackbuild/sbotools/README
+++ b/slackbuild/sbotools/README
@@ -22,3 +22,5 @@ Please note that sbotools-3.x is based on an actively-maintained fork
 of the repository used for versions 1.9 through 2.7. A debt of gratitude
 is owed to the original author, Jacob Pipkin, longtime maintainer
 Andreas Guldstrand and major contributor Luke Williams.
+
+sbotools conflicts with system/sbotools2 (Legacy Sbotools).
