--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -92,6 +92,13 @@ sbotools.conf\fR\
 .B
 sbotools.conf(5)\fR\
 \&.
+.B
+sbotools.hints(5)\fR\
+documents the
+.I
+/etc/sbotools/sbotools.hints
+file, which can be used to blacklist scripts and request optional
+dependencies.
 .SH STARTUP
 When using
 .B
@@ -181,7 +188,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5)
+sbocheck(1), sboclean(1), sboconfig(1), sbofind(1), sboinstall(1), sboremove(1), sbosnap(1), sboupgrade(1), sbotools.conf(5), sbotools.hints(5)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
