--- a/slackbuild/sbotools/README
+++ b/slackbuild/sbotools/README
@@ -3,7 +3,8 @@ sbotools (ports-like interface to slackbuilds.org)
 sbotools is a set of Perl scripts providing a ports-like automation
 interface to slackbuilds.org. Features include dependency handling,
 using a custom git branch, generating 32-bit and compat32 builds on
-multilib systems, reverse dependency search and more.
+multilib systems, blacklisting scripts, requesting optional
+dependencies, reverse dependency search and more.
 
 There is a man page for each included command. For 'executive
 summaries' and online man pages, see the project's home page.
