--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sbotools 1 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
