--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sbotools.conf 5 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
@@ -175,7 +175,7 @@ LOCAL_OVERRIDES=(FALSE|/path)
 If set to a
 .B
 path\fR\
-\&, any directory name in the first level under that path matching a
+\&, any directory name in the top level under that path matching a
 SlackBuild name will be used in preference to the
 in-tree version. This will work even if the SlackBuild
 is out-of-tree. Scripts installing packages not marked
