--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -1,4 +1,4 @@
-.TH sbotools.hints 5 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sbotools.hints 5 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
