--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -1,4 +1,4 @@
-.TH sboconfig 1 "Sweetmorn, The Aftermath 34, 3190 YOLD" "sbotools 3.0" sbotools
+.TH sboconfig 1 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
@@ -233,7 +233,7 @@ LOCAL_OVERRIDES\fR\
 \&: If set to a
 .B
 path\fR\
-\&, any directory name in the first level under that path matching a
+\&, any directory name in the top level under that path matching a
 SlackBuild name will be used in preference to the
 in-tree version. This will work even if the SlackBuild
 is out-of-tree. Scripts installing packages not marked
