MIT License and re-release 3.1.

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,5 +1,5 @@
 sbotools
-3.1 - 2024-12-04
+3.1 - 2024-12-05
   * sbofind: Allow multiple search terms
   * Add a summary sbotools(1) man page with executive summaries and a startup guide
   * sboinstall: Use --mass-rebuild to rebuild all non-compat32 SlackBuilds
@@ -11,6 +11,7 @@ sbotools
   * sboinstall: Use a resume file for --mass-rebuild
   * Clarify LOCAL_OVERRIDES documentation
   * Detect and handle next version (now 15.1) more effectively
+  * Adopt MIT License
 
 3.0 - 2024-11-22
   * sbocheck: Use --nopull to check for updated SlackBuilds without updating the tree
