--- a/man1/sbosnap.1
+++ b/man1/sbosnap.1
@@ -1,4 +1,4 @@
-.TH sbosnap 1 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbosnap 1 "Prickle-Prickle, The Aftermath 47, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
