--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -1,4 +1,4 @@
-.TH sbotools.hints 5 "Pungenday, The Aftermath 46, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbotools.hints 5 "Prickle-Prickle, The Aftermath 47, 3190 YOLD" "sbotools 3.1" sbotools
 .SH NAME
 .P
 .B
