sbocheck: Do not use compact format in CLASSIC

--- a/SBO-Lib/Changes
+++ b/SBO-Lib/Changes
@@ -1,4 +1,7 @@
 sbotools
+* Post-Release
+  * sbocheck: Do not use compact format for CLASSIC mode
+
 3.1 - 2024-12-05
   * sbofind: Allow multiple search terms
   * Add a summary sbotools(1) man page with executive summaries and a startup guide
