--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -95,6 +95,19 @@ as a fallback measure. The
 --all
 flag may be passed to upgrade all eligible SlackBuilds
 simultaneously.
+.P
+.B
+sboupgrade
+will verify the local repository with
+.B
+gpg
+if
+.B
+GPG_VERIFY
+is
+.B
+TRUE\fR\
+\&.
 .SH OPTIONS
 .P
 .B
