--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -66,6 +66,30 @@ is set, package archives will be saved there regardless of
 DISTCLEAN\fR\
 \&.
 .RE
+GPG_VERIFY\fR\
+\&: If
+.B
+TRUE\fR\
+\&, use
+.B
+gpg
+to verify the contents of the local repository when running
+.B
+sbosnap(1)\fR\
+\&,
+.B
+sbocheck(1)\fR\
+\&,
+.B
+sboinstall(1)
+and
+.B
+sboupgrade(1)\fR\
+\&. Missing public keys are detected, and a download from
+.UR keyserver.ubuntu.com
+.UE
+on port 80 will be offered if available.
+.RE
 .P
 .B
 JOBS=(FALSE|#)
