gpg compatibility fixes

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -87,6 +87,7 @@ and
 .B
 --nopull
 verifies the repo in-place without fetching.
+Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .SH OPTIONS
 .P
 .B
@@ -105,6 +106,7 @@ FALSE\fR\
 .B
 --nopull\fR\
 \&, verify the repo without fetching.
+Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .RE
 .P
 .B
