--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -89,6 +89,7 @@ sboupgrade(1)\fR\
 .UR keyserver.ubuntu.com
 .UE
 on port 80 will be offered if available.
+Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .RE
 .P
 .B
