--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -330,7 +330,7 @@ RSYNC_DEFAULT
 is
 .B
 TRUE
-and
+and for Slackware versions prior to 14.2, and
 .UR https://gitlab.com/SlackBuilds.org
 .UE
 otherwise. The repository must be laid out in the same
