--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -130,7 +130,7 @@ or by editing
 \&.
 
 The default mirror depends on the running version of Slackware. Stable
-releases use the appropriate branch on
+releases beyond Slackware 14.1 use the appropriate branch on
 .UR https://gitlab.com/SlackBuilds.org/slackbuilds/
 .UE
 and -current uses
@@ -139,10 +139,10 @@ and -current uses
 with the
 .B
 current
-branch.
+branch. Slackware 14.0 and 14.1 have default rsync mirrors.
 
 To use an rsync mirror with <rsync://slackbuilds.org/slackbuilds/*/>
-instead, set
+as the default, set
 .B
 RSYNC_DEFAULT
 to
